--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y autoconf automake nodejs php5
 
-script: ./watchman/travis.sh
+script: ./travis.sh
